--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule "src/roselito_agent"]
 	path = src/roselito_agent
 	url = git@github.com:gabryelfbatista/roselito_agent.git
+[submodule "src/ros_commons"]
+	path = src/ros_commons
+	url = git@github.com:ros2amr/ros_commons.git
+[submodule "src/roselito_description"]
+	path = src/roselito_description
+	url = git@github.com:ros2amr/roselito_description.git
+[submodule "src/roselito_gazebo"]
+	path = src/roselito_gazebo
+	url = git@github.com:ros2amr/roselito_gazebo.git
+[submodule "src/roselito_gui"]
+	path = src/roselito_gui
+	url = git@github.com:ros2amr/roselito_gui.git
+[submodule "src/roselito_navigation"]
+	path = src/roselito_navigation
+	url = git@github.com:ros2amr/roselito_navigation.git
